@@ -1,7 +1,7 @@
 Package: SSDM
 Type: Package
 Title: Stacked Species Distribution Modelling
-Version: 0.1.9023
+Version: 0.1.9024
 Date: 2016-02-24
 Author: Sylvain Schmitt, Robin Pouteau, Dimitri Justeau, Philippe Birnbaum
 Maintainer: Sylvain Schmitt <sylvain.schmitt@agroparistech.fr>
@@ -58,3 +58,4 @@ Collate:
     'stacking.R'
     'update.stack.R'
     'zzz.R'
+RoxygenNote: 5.0.1
