@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Ensemble.SDM.R
 \docType{class}
 \name{Ensemble.SDM-class}
@@ -20,9 +20,9 @@ support vector machines). This S4 class is obtained with
 \item{\code{algorithm.correlation}}{data frame. Between-algorithm correlation matrix.}
 
 \item{\code{algorithm.evaluation}}{data frame. Evaluation of the ensemble SDM (available
- metrics include AUC, Kappa, sensitivity, specificity and proportion of
- correctly predicted occurrences) and identification of the optimal threshold
- to convert the habitat suitability map into a binary presence/absence map.}
+metrics include AUC, Kappa, sensitivity, specificity and proportion of
+correctly predicted occurrences) and identification of the optimal threshold
+to convert the habitat suitability map into a binary presence/absence map.}
 }}
 \seealso{
 \linkS4class{Algorithm.SDM} an S4 class to represent an SDM based on
