@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Stacked.SDM.R
 \docType{class}
 \name{Stacked.SDM-class}
@@ -38,8 +38,8 @@ the SSDM.}
 \item{\code{parameters}}{data frame. Parameters used to build the SSDM.}
 
 \item{\code{algorithm.evaluation}}{data frame. Evaluation of the algorithm averaging
- the metrics of all SDMs (AUC, Kappa, omission rate, sensitivity,
- specificity, proportion of correctly predicted occurrences).}
+the metrics of all SDMs (AUC, Kappa, omission rate, sensitivity,
+specificity, proportion of correctly predicted occurrences).}
 }}
 \references{
 M. D. Crisp, S. Laffan, H. P. Linder & A. Monro (2001)
