@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/ensemble.R
 \docType{methods}
 \name{ensemble}
@@ -20,7 +20,7 @@ ensemble(x, ..., name = NULL, ensemble.metric = c("AUC"),
   thresh = 1001, format = T, verbose = T, na.rm = F)
 }
 \arguments{
-\item{x,...}{SDMs. SDMs to be assembled.}
+\item{x, ...}{SDMs. SDMs to be assembled.}
 
 \item{name}{character. Optional name given to the final Ensemble.SDM produced
 (by default 'Ensemble.SDM').}
@@ -45,8 +45,8 @@ correlation matrix.}
 \item{verbose}{logical. If set to true, allows the function to print text in the
 console.}
 
-\item{GUI,format,na.rm}{logical. Don't take those arguments into account
- (parameters for the user interface and sum function).}
+\item{GUI, format, na.rm}{logical. Don't take those arguments into account
+(parameters for the user interface and sum function).}
 }
 \value{
 an S4 \linkS4class{Ensemble.SDM} class object viewable with the
@@ -85,6 +85,7 @@ ESDM = ensemble(CTA, SVM, ensemble.thresh = c(0.6))
 # Results plotting
 plot(ESDM)
 }
+
 }
 \seealso{
 \code{\link{ensemble_modelling}} to build an ensemble SDM from
