@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/ensemble_modelling.R
 \name{ensemble_modelling}
 \alias{ensemble_modelling}
@@ -88,7 +88,7 @@ the console.}
 user interface).}
 
 \item{...}{additional parameters for the algorithm modelling function (see
- details below).}
+details below).}
 }
 \value{
 an S4 \linkS4class{Ensemble.SDM} class object viewable with the
@@ -257,6 +257,7 @@ ESDM = ensemble_modelling(c('CTA', 'MARS'), Occurrences, Env, rep = 1,
 # Results plotting
 plot(ESDM)
 }
+
 }
 \references{
 M. Barbet-Massin, F. Jiguet, C. H.  Albert, & W. Thuiller (2012)
