@@ -1,10 +1,18 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/gui.R
 \name{gui}
 \alias{gui}
 \title{SSDM package Global User Interface}
 \usage{
-gui()
+gui(port = getOption("shiny.port"), host = getOption("shiny.host",
+  "127.0.0.1"))
+}
+\arguments{
+\item{port}{char. The TCP port that the application should listen on (see
+\code{\link[shiny]{runApp}} for more details).}
+
+\item{host}{char. The IPv4 address that the application should listen on (see
+\code{\link[shiny]{runApp}} for more details).}
 }
 \value{
 Open a window with a shiny app to use the SSDM package with an
@@ -21,5 +29,6 @@ If your environmental variables have an important size, you should
 \dontrun{
 gui()
 }
+
 }
 
