@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/load_model.R
 \name{load.model}
 \alias{load.model}
@@ -18,7 +18,7 @@ loaded.}
 loaded, by default the path to the current directory.}
 
 \item{GUI}{logical. Don't take that argument into account (parameter for the
-  user interface).}
+user interface).}
 }
 \value{
 The corresponding SDM object.
