@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/load_occ.R
 \name{load_occ}
 \alias{load_occ}
@@ -38,7 +38,7 @@ default the resolution of the raster stack (Env).}
 console.}
 
 \item{GUI}{logical. Don't take that argument into account (parameter for the
- user interface).}
+user interface).}
 }
 \value{
 A data frame containing the occurrence dataset (spatially thinned or
@@ -52,6 +52,7 @@ Function to load occurrence data from a table to perform \code{\link{modelling}}
 \dontrun{
 load.occ(path)
 }
+
 }
 \seealso{
 \code{\link{load_var}} to load environmental variables.
