@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/load_var.R
 \name{load_var}
 \alias{load_var}
@@ -31,7 +31,7 @@ beware: if you close R, temporary files will be destroyed.}
 console.}
 
 \item{GUI}{logical. Don't take that argument into account (parameter for the
- user interface).}
+user interface).}
 }
 \value{
 A stack containing the environmental rasters (normalized or
@@ -46,6 +46,7 @@ Function to load environmental variables in the form of rasters to perform
 \dontrun{
 load.var(path)
 }
+
 }
 \seealso{
 \code{\link{load_occ}} to load occurrences.
