@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/modelling.R
 \name{modelling}
 \alias{modelling}
@@ -70,7 +70,7 @@ the console.}
 user interface).}
 
 \item{...}{additional parameters for the algorithm modelling function (see
- details below).}
+details below).}
 }
 \value{
 an S4 \linkS4class{Algorithm.SDM} Class object viewable with the
@@ -235,6 +235,8 @@ SDM = modelling('GLM', Occurrences, Env, Xcol = 'LONGITUDE', Ycol = 'LATITUDE')
 \dontrun{
 plot(SDM)
 }
+
+
 }
 \references{
 M. Barbet-Massin, F. Jiguet, C. H.  Albert, & W. Thuiller (2012)
