@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/plot.model.R
 \docType{methods}
 \name{plot.model}
@@ -15,7 +15,7 @@
 \item{x}{Object to be plotted (S4 Algorithm.SDM, Ensemble.SDM or Stacked.SDM
 object).}
 
-\item{y,...}{Plot-based parameter not used.}
+\item{y, ...}{Plot-based parameter not used.}
 }
 \value{
 Open a window with a shiny app rendering all the results (habitat
