@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/save.model.R
 \docType{methods}
 \name{save.model}
@@ -12,8 +12,9 @@
 save.enm(enm, name = strsplit(enm@name, ".", fixed = T)[[1]][1],
   path = getwd(), verbose = T, GUI = F)
 
-\S4method{save.enm}{Ensemble.SDM}(enm, name = strsplit(enm@name, ".", fixed =
-  T)[[1]][1], path = getwd(), verbose = T, GUI = F)
+\S4method{save.enm}{Ensemble.SDM}(enm, name = strsplit(enm@name,
+  ".Ensemble.SDM", fixed = T)[[1]][1], path = getwd(), verbose = T,
+  GUI = F)
 
 save.stack(stack, name = "Stack", path = getwd(), verbose = T, GUI = F)
 
@@ -32,7 +33,7 @@ by default the path to the current directory.}
 console.}
 
 \item{GUI}{logical. Don't take that argument into account (parameter for the
-  user interface).}
+user interface).}
 
 \item{stack}{Stacked.SDM. SSDM to be saved.}
 }
