@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/stack_modelling.R
 \name{stack_modelling}
 \alias{stack_modelling}
@@ -110,7 +110,7 @@ computing. You can use \code{\link[parallel]{detectCores}}) to automatically
 used all you available CPU cores.}
 
 \item{...}{additional parameters for the algorithm modelling function (see
- details below).}
+details below).}
 }
 \value{
 an S4 \linkS4class{Stacked.SDM} class object viewable with the
@@ -295,6 +295,7 @@ SSDM = stack_modelling(c('CTA', 'SVM'), Occurrences, Env, rep = 1,
 # Results plotting
 plot(SSDM)
 }
+
 }
 \references{
 M. Barbet-Massin, F. Jiguet, C. H.  Albert, & W. Thuiller (2012)
