@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/stacking.R
 \docType{methods}
 \name{stacking}
@@ -14,7 +14,7 @@ stacking(enm, ..., name = NULL, method = "P", rep.B = 1000,
   verbose = T, GUI = F)
 }
 \arguments{
-\item{enm,...}{character. Ensemble SDMs to be stacked.}
+\item{enm, ...}{character. Ensemble SDMs to be stacked.}
 
 \item{name}{character. Optional name given to the final SSDM produced (by
 default 'Species.SDM').}
@@ -38,7 +38,7 @@ range restriction will be applied.}
 the console.}
 
 \item{GUI}{logical. Don't take that argument into account (parameter for the
- user interface).}
+user interface).}
 }
 \value{
 an S4 \linkS4class{Stacked.SDM} class object viewable with the
@@ -93,6 +93,7 @@ SSDM = stacking(ESDM1, ESDM2)
 # Results plotting
 plot(SSDM)
 }
+
 }
 \references{
 C. Liu, P. M. Berry, T. P. Dawson,  R. & G. Pearson (2005)
