@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/update.stack.R
 \docType{methods}
 \name{update,Stacked.SDM-method}
@@ -55,7 +55,7 @@ the console.}
 user interface).}
 
 \item{...}{additional parameters for the algorithm modelling function (see
- details below).}
+details below).}
 }
 \value{
 an S4 \linkS4class{Stacked.SDM} class object viewable with the
@@ -71,6 +71,7 @@ previously built SSDM.
 \dontrun{
 update(stack, Occurrences, Env, Spname = 'NewSpecie')
 }
+
 }
 \seealso{
 \code{\link{stack_modelling}} to build SSDMs.
