@@ -1,4 +1,6 @@
-SSDM 0.1.9022 tmmpath in stack_modelling()
+SSDM 0.1.9024 Dimitri Justeau: Enable host and port option when launching the gui
+              README
+SSDM 0.1.9023 tmmpath in stack_modelling()
               split with '.Ensemble.SDM' instead of '.' in save, plot, and gui
 SSDM 0.1.9022 ESDM list in plot.model bug fixed
 SSDM 0.1.9021 CRAN second submit changes
